--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
     --accent: 216 5% 17%;
     --accent-foreground: 210 8% 98%;
 
-    --popover: 224 7% 4% 0.7;
+    --popover: 224 5% 8%;
     --popover-foreground: 215 2.2% 65.1%;
 
     --border: 216 3% 17%;
